--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -9,8 +9,9 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Avenir";
-   font-weight: 100%;
+    font-weight: 100%;
     box-sizing: border-box;
+    color: $color-primary-dark;
 }
 
 *,
