--- a/styles/bio.css
+++ b/styles/bio.css
@@ -118,7 +118,6 @@
 }
 .main__form {
   width: 100%;
-  text-align: center;
 }
 .main__form--header {
   font-weight: 700;
@@ -135,6 +134,14 @@
   .main__form--header {
     margin-left: 4rem;
     font-size: 2rem;
+  }
+}
+.main__third {
+  width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .main__third {
+    width: 70rem;
   }
 }
 
@@ -188,6 +195,7 @@
     text-align: left;
     background: #FAFAFA;
     padding: 2rem 4rem 2rem 4rem;
+    width: 100vw;
   }
 }
 
@@ -276,12 +284,19 @@
   width: 90%;
   font-family: "Avenir";
   margin: 0 auto;
+  justify-content: center;
 }
 @media only screen and (min-width: 768px) {
   .form {
-    width: 60%;
+    width: 50rem;
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .form {
+    width: 70rem;
+    margin: 0 auto;
   }
 }
 .form__left {
@@ -327,42 +342,63 @@
   box-shadow: none;
   border-radius: 5px;
   border: 1px solid #E1E1E1;
-  width: 100%;
+  width: 30rem;
   color: #000000;
   margin: 0 auto;
+  background-color: #FAFAFA;
 }
 .form__name--item:focus {
   border: 1px solid #323232;
 }
-.form__textarea-item {
-  height: 5rem;
+.form__textarea--item {
+  height: 10rem;
   box-shadow: none;
-  width: 100%;
+  width: 30rem;
   color: #000000;
-  padding: 2rem 0 2rem 0;
-  margin: 0 auto;
+  background-color: #FAFAFA;
+  border-radius: 5px;
+  border: 1px solid #E1E1E1;
+  font-family: "Avenir";
+}
+.form__textarea--item:focus {
+  border: 1px solid #323232;
 }
 .form__button {
-  position: relative;
   height: 4.375rem;
+  align-items: center;
+  position: relative;
 }
 .form__button--btn {
-  height: 40px;
-  width: 17rem;
+  height: 50px;
+  width: 20rem;
   border-radius: 0.3125rem;
   background: #323232;
   color: #ffffff;
   font-family: "Avenir";
   font-weight: 600;
   border: 1px solid #323232;
-  margin: 0 auto;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  align-items: center;
   position: absolute;
-  right: 0;
+  left: 25%;
 }
 .form__button--btn:hover {
   background: #000000;
+}
+
+.section {
+  display: flex;
+  width: 90%;
+  font-family: "Avenir";
+  margin: 0 auto;
+  flex-direction: column;
+}
+@media only screen and (min-width: 768px) {
+  .section {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
 }
 
 .center {
@@ -391,19 +427,28 @@
   justify-content: center;
   width: 90%;
   font-family: "Avenir";
-  margin: 0 auto;
-  /*right part of comments*/
 }
 @media only screen and (min-width: 768px) {
   .comments {
-    width: 60%;
     font-size: 1.5rem;
     line-height: 2rem;
+    width: 50rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin: 0 auto;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .comments {
+    width: 70rem;
+    margin: 0 auto;
   }
 }
 .comments__left {
   display: block;
-  width: 20%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   padding: 0.7rem;
   margin: 0;
 }
@@ -422,7 +467,9 @@
     height: 48px;
   }
 }
-
+.comments__right {
+  width: 80%;
+}
 .comments__right--date {
   color: #AFAFAF;
   display: inline-block;
@@ -440,7 +487,7 @@
   color: #323232;
 }
 
-textarea {
+.form__textarea-item {
   width: 80%;
   text-align: center;
   background: #FAFAFA;
@@ -514,7 +561,7 @@ textarea {
     margin-left: 30px;
     font-weight: 400;
     padding-bottom: 25px;
-    font-size: 1rem;
+    font-weight: 700;
     line-height: 2rem;
   }
 }
@@ -675,7 +722,6 @@ a {
 
 @media only screen and (min-width: 1280px) {
   .footer__fifth--content {
-    margin-left: 2rem;
     display: inline-block;
     position: absolute;
     bottom: 0;
