--- a/styles/bio.css
+++ b/styles/bio.css
@@ -372,7 +372,7 @@
 }
 .form__button--btn {
   height: 40px;
-  width: 100%;
+  max-width: 100vw;
   border-radius: 0.3125rem;
   background: #323232;
   color: #ffffff;
@@ -532,7 +532,7 @@
   display: flex;
   padding-left: 0;
   justify-content: space-evenly;
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 2rem;
 }
 .header__navigation {
@@ -557,7 +557,7 @@
 }
 @media only screen and (min-width: 768px) {
   .header__menu-item {
-    font-size: 1.8rem;
+    font-size: 1rem;
     display: inline-block;
     justify-content: space-around;
     margin-left: 30px;
@@ -580,26 +580,25 @@
     align-items: center;
   }
 }
-.header__menu-item:active {
+.active {
   border-bottom: 0.2rem solid #ffffff;
   padding-bottom: 25px;
   font-weight: 400;
   color: #ffffff;
 }
 @media only screen and (min-width: 768px) {
-  .header__menu-item:active {
+  .active {
     font-weight: 400;
     font-size: 1rem;
     line-height: 2rem;
-    padding-bottom: 25px;
+    padding-bottom: 21px;
     color: #ffffff;
   }
 }
 
 .header__menu-item:hover {
-  border-bottom: 0.2rem solid #ffffff;
   font-weight: 600;
-  padding-bottom: 25px;
+  padding-bottom: 21px;
   color: #ffffff;
 }
 @media only screen and (min-width: 768px) {
