--- a/styles/bio.css
+++ b/styles/bio.css
@@ -16,29 +16,6 @@
   font-weight: 400;
   font-style: normal;
 }
-/*
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Bold") format("truetype");
-    font-weight: 700;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Demi") format("truetype");
-    font-weight: 600;
-    font-style: normal;
-}
-
-
-@font-face {
-    font-family: "Avenir";
-    src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Regular") format("truetype");
-    font-weight: 400;
-    font-style: normal;
-}
-*/
 /************* primary colors ********************/
 /*************secondary colors *****************/
 /*
@@ -312,19 +289,23 @@
 .form__right {
   width: 80%;
   margin-left: 0;
+  display: flex;
+  flex-direction: column;
 }
 .form__img {
-  width: 36px;
-  height: 36px;
+  width: 2.25rem;
+  height: 2.25rem;
   border: 1px solid white;
-  margin-left: 5px;
+  margin-left: 0.3125rem;
   position: relative;
   border-radius: 50%;
+  margin-top: 1.875rem;
 }
 @media only screen and (min-width: 768px) {
   .form__img {
-    width: 48px;
-    height: 48px;
+    width: 3rem;
+    height: 3rem;
+    margin-top: 1.875rem;
   }
 }
 .form__label {
@@ -344,7 +325,7 @@
   box-shadow: none;
   border-radius: 5px;
   border: 1px solid #E1E1E1;
-  width: 70vmax;
+  width: 100%;
   color: #000000;
   margin: 0 auto;
   background-color: #FAFAFA;
@@ -355,7 +336,7 @@
 .form__textarea--item {
   height: 10rem;
   box-shadow: none;
-  width: 70vmax;
+  width: 100%;
   color: #000000;
   background-color: #FAFAFA;
   border-radius: 5px;
@@ -368,22 +349,28 @@
 .form__button {
   height: 4.375rem;
   align-items: center;
-  margin: 0 auto;
+  margin: 0.5rem 0 0.5rem 0;
 }
 .form__button--btn {
-  height: 40px;
-  max-width: 100vw;
+  height: 2.5rem;
+  width: 100%;
+  display: block;
   border-radius: 0.3125rem;
   background: #323232;
   color: #ffffff;
   font-family: "Avenir";
-  font-weight: 600;
-  border: 1px solid #323232;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  font-weight: 700;
+  font-size: 0.625rem;
+  line-height: 1.25rem;
+  border: none;
   align-items: center;
-  position: absolute;
-  left: 25%;
+  cursor: pointer;
+}
+@media only screen and (min-width: 768px) {
+  .form__button--btn {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
 }
 .form__button--btn:hover {
   background: #000000;
@@ -487,18 +474,6 @@
   display: inline-block;
   width: 50%;
   color: #323232;
-}
-
-.form__textarea-item {
-  width: 80%;
-  text-align: center;
-  background: #FAFAFA;
-  border: 1px solid #AFAFAF;
-  font-family: "Avenir";
-  border-radius: 0.3125rem;
-  text-align: left;
-  padding-left: 0;
-  margin-left: 0;
 }
 
 .header {
