--- a/styles/bio.css
+++ b/styles/bio.css
@@ -62,10 +62,15 @@
 }
 .main__hero--image {
   width: 100vw;
-  height: 50vw;
+  height: 70vw;
   margin: 0 auto;
   background-size: cover;
   position: relative;
+}
+@media only screen and (min-width: 768px) {
+  .main__hero--image {
+    height: 50vw;
+  }
 }
 .main__hero--title {
   top: 0;
@@ -74,7 +79,7 @@
   position: absolute;
   text-align: left;
   padding-top: 25%;
-  height: 50vw;
+  height: 70vw;
   right: 0;
   color: #ffffff;
   background: rgba(50, 50, 50, 0.5);
@@ -90,6 +95,7 @@
     font-size: 3.75rem;
     line-height: 4.25rem;
     padding-left: 6rem;
+    height: 50vw;
   }
 }
 @media only screen and (min-width: 1280px) {
@@ -97,6 +103,7 @@
     font-weight: bold;
     font-size: 3.75rem;
     line-height: 4.25rem;
+    height: 50vw;
   }
 }
 .main__form {
@@ -724,7 +731,7 @@ li {
 @media only screen and (min-width: 768px) {
   .footer {
     border: 1px solid #323232;
-    font-weight: 900;
+    font-weight: 400;
     display: flex;
     flex-direction: row;
     padding: 20px;
@@ -747,6 +754,7 @@ li {
     width: -moz-fit-content;
     width: fit-content;
     font-size: 2rem;
+    font-weight: 900;
   }
   .footer__first--icons {
     margin: 1rem;
